[package]
name = "fix_me"
version = "0.1.0"
license = "MIT"
authors = ["Dylan Gebel <dylanfoxx@optonline.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]

default = []

unfixed_code = []

build_tests = []