[package]
name = "fix_me"
version = "0.1.1"
license = "MIT"

readme = "README.md"
repository = "https://github.com/dylanfoxx/fix_me"
keywords = ["macro", "nostd"]
description = "A very simple macro that lets you write temporary code that WILL NOT build in release mode."

authors = ["Dylan Gebel <dylanfoxx@optonline.net>"]
edition = "2018"

[dependencies]

[features]

unfixed_code = []

build_tests = []